# ai-playground

./: .gitignore  pyproject.toml
src/: advanced_rag.py  chunking.py  embeddings.py  llm.py  main.py  prompts.py  rag.py
tests/: test_main.py
